<resources>
    <string name="app_name">BluPrint</string>
    <string name="recom_welfare_center">福利中心</string>
    <string name="recom_welfare_desc">这里有丰富的活动和福利</string>
    <string name="item_change_next">换一批</string>
    <string name="recom_welfare_enter">立即进入</string>
    <string name="me_click_login">立即登录</string>
    <string name="me_my_collection">我的收藏</string>
    <string name="me_submit">我要投稿</string>
    <string name="me_feedback">反馈意见</string>
    <string name="me_current_version">当前版本</string>
    <string name="me_title">我的</string>
    <string name="custom_tv_loading">正在玩命加载中...</string>
    <string name="custom_tv_empty">什么都木有</string>
    <string name="raiders_tb_tv_search">查找攻略从这里开始</string>
    <string name="fm_radiers_syn_tjdq">图鉴大全</string>
    <string name="common_show_all">查看全部</string>
    <string name="fm_radiers_syn_wpbk">物品百科</string>
    <string name="fm_raiders_tutor_advance">进阶教程</string>
    <string name="fm_raiders_tutor_fresh">新手教程</string>
    <string name="fm_raiders_tutor_stone">电石教程</string>
    <string name="common_search_history">搜索历史</string>
    <string name="common_search_history_clear">清空</string>
    <string name="common_search_hot">大家都在搜</string>
    <string name="frgmt_live_title">查找视频从这里开始</string>
    <string name="item_frgmt_live_ing">直播中</string>
    <string name="live_reco_xxyl">休闲娱乐</string>
    <string name="live_reco_dljx">电路教学</string>
    <string name="live_reco_scsk">生存实况</string>
    <string name="live_reco_jzjx">建筑教学</string>
    <string name="me_login_mini_msg">登陆后可查看更多精彩内容</string>
    <string name="me_my_find">找人</string>
    <string name="me_my_share">我的分享</string>
    <string name="me_login_mini">迷你号：%s</string>
    <string name="title_activity_my_center">MyCenterActivity</string>
    <string name="me_center_edit_name">编辑昵称</string>
    <string name="me_center_fances">%d\n粉丝</string>
    <string name="me_center_follow">%d\n关注</string>
    <string name="me_item_followed">已关注</string>
    <string name="me_item_followed_each">互相关注</string>
    <string name="me_item_tofollow">关注</string>
    <string name="me_setting_title">设置</string>
    <string name="me_setting_center_share">我的分享</string>
    <string name="me_center_search_stars">搜索：关注的人</string>
    <string name="me_center_search_follows">搜索：你的粉丝</string>
    <string name="fm_radiers_search_hint">请输入你要查找的内容</string>
    <string name="me_center_find_user">输入 昵称/迷你号 找人</string>
    <string name="item_wshop_recom_jx">精选地图</string>
    <string name="item_wshop_recom_down_open">打开</string>
    <string name="item_wshop_recom_down_download">下载</string>
    <string name="item_wshop_recom_down_update">更新</string>
    <string name="item_wshop_recom_getwalfare">领取</string>
    <string name="item_wshop_recom_walfare_endtime">截止日期：%s</string>
    <string name="item_wshop_recom_mini_desc" formatted="false">%s版本  %fM</string>
    <string name="item_workshop_walfare_activitys">活动</string>
    <string name="item_walfare_activitys_desc">活动简介：%s</string>
    <string name="item_ws_map_detail_download">下载：%d</string>
    <string name="item_ws_map_detail_size">大小：%d</string>
    <string name="item_walfare_activitys_duration">活动时间：%s</string>
    <string name="frgmt_ws_topic_item_enter">立即进入</string>
    <string name="frgmt_ws_online_search_joinroom">迷你号搜索加入房间</string>
    <string name="item_ws_online_room_tv_percent" translatable="false">%1$d/%2$d</string>
    <string name="item_ws_online_room_tv_mapversion">地图版本：%s</string>
    <string name="item_ws_online_room_tv_mini">迷你号：%s</string>
    <string name="frgmt_ws_feature_mapsort_title">地图分类</string>
    <string name="me_home_tobind_mini">前往绑定迷你号</string>
    <string name="frgmt_ws_room_join">一键加入</string>
    <string name="frgmt_ws_room_unlocked">已解锁</string>
    <string name="frgmt_ws_room_locked">未解锁</string>
    <string name="frgmt_ws_room_unlock_join">解锁加入</string>
    <string name="frgmt_ws_room_overflow">房间已满</string>
    <string name="frgmt_ws_tv_map_search">查找地图从这里开始</string>
    <string name="frgmt_ws_online_search_hint">请输入房主的迷你号</string>
    <string name="frgmt_ws_loacl_mapmanager">本地资源</string>
    <string name="frgmt_ws_local_map_manage_edit">编辑</string>
    <string name="frgmt_ws_local_map_manage_done">完成</string>

    <!--<string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>-->
</resources>
