<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="14dp"
            android:paddingRight="14dp"
            android:paddingTop="@dimen/card_pading_8"
            android:clipToPadding="false"
            android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutAnimation="@anim/layanipushup"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/fm_raiders_tutorial_fresh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_jbackground"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginLeft="@dimen/card_pading_8"
                android:drawableLeft="@drawable/icon_ass_greentitle"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:textColor="@color/black333"
                android:textSize="@dimen/tab_top_textsize"
                android:text="@string/fm_raiders_tutor_fresh"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_margin="@dimen/card_pading_8"
                tools:src="@mipmap/ic_launcher"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/card_pading_8"
                android:background="@color/common_q_gray"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fm_raiders_tutorial_advance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_jbackground"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginLeft="@dimen/card_pading_8"
                android:drawableLeft="@drawable/icon_ass_greentitle"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:textColor="@color/black333"
                android:textSize="@dimen/tab_top_textsize"
                android:text="@string/fm_raiders_tutor_advance"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_margin="@dimen/card_pading_8"
                tools:src="@mipmap/ic_launcher"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/card_pading_8"
                android:background="@color/common_q_gray"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fm_raiders_tutorial_stone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_jbackground"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginLeft="@dimen/card_pading_8"
                android:drawableLeft="@drawable/icon_ass_greentitle"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:textColor="@color/black333"
                android:textSize="@dimen/tab_top_textsize"
                android:text="@string/fm_raiders_tutor_stone"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_margin="@dimen/card_pading_8"
                tools:src="@mipmap/ic_launcher"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/card_pading_8"
                android:background="@color/common_q_gray"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>